Updated login button styling.

--- a/spotify-album-art/src/styles/General.scss
+++ b/spotify-album-art/src/styles/General.scss
@@ -1,4 +1,12 @@
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+
 .main-dropdown {
+    color: black !important;
+    background-color: rgb(37, 209, 89) !important;
+    border-color: black !important;
+}
+
+.btn-log-in {
     color: black !important;
     background-color: rgb(37, 209, 89) !important;
     border-color: black !important;
