Added progress bars showing popularity.

--- a/spotify-album-art/src/styles/General.scss
+++ b/spotify-album-art/src/styles/General.scss
@@ -11,3 +11,11 @@
     background-color: rgb(37, 209, 89) !important;
     border-color: black !important;
 }
+
+.progress-bar-container {
+    margin-top: 1rem;
+}
+
+.progress-bar {
+    background-color: rgb(37, 209, 89) !important;
+}
