Shrank profile image and added border radius.

--- a/spotify-album-art/src/styles/General.scss
+++ b/spotify-album-art/src/styles/General.scss
@@ -19,3 +19,9 @@
 .progress-bar {
     background-color: rgb(30, 215, 96) !important;
 }
+
+.profile-image {
+    display: block;
+    border-radius: 2rem;
+    width: 5rem;
+}
