--- a/spotify-album-art/src/styles/General.scss
+++ b/spotify-album-art/src/styles/General.scss
@@ -24,4 +24,12 @@
     display: block;
     border-radius: 2rem;
     width: 5rem;
+    margin-left: 1rem;
+}
+
+.user-profile-display {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
