--- a/spotify-album-art/src/styles/General.scss
+++ b/spotify-album-art/src/styles/General.scss
@@ -33,3 +33,17 @@
     justify-content: flex-end;
     align-items: center;
 }
+
+.profile-display-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.controls-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem 0;
+}
