--- a/spotify-album-art/src/styles/SongDisplay.scss
+++ b/spotify-album-art/src/styles/SongDisplay.scss
@@ -17,7 +17,19 @@
     margin-bottom: 2rem;
 }
 
+.modal-header {
+    background: black;
+    padding: 0 !important;
+}
+
 .song-details-artist-image {
     object-fit: cover;
     width: 100%;
+    opacity: 0.5;
+}
+
+.song-details-album-image {
+    position: absolute;
+    width: 8rem;
+    transform: translate(1rem, -11rem);
 }
