--- a/spotify-album-art/src/styles/SongDisplay.scss
+++ b/spotify-album-art/src/styles/SongDisplay.scss
@@ -28,8 +28,28 @@
     opacity: 0.5;
 }
 
-.song-details-album-image {
+.open-modal-song-details {
     position: absolute;
-    width: 8rem;
-    transform: translate(1rem, -11rem);
+    transform: translate(0, -11rem);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
+    img {
+        width: 8rem;
+        border-radius: 0.5rem;
+    }
+
+    div {
+        color: white;
+        margin-left: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        h5 {
+            font-style: italic;
+        }
+    }
 }
