--- a/spotify-album-art/src/styles/SongDisplay.scss
+++ b/spotify-album-art/src/styles/SongDisplay.scss
@@ -3,6 +3,63 @@
     cursor: pointer;
 }
 
+.hidden {
+    opacity: 0;
+}
+
+.fade-in {
+    animation: fadeIn 2s;
+    -o-animation: fadeIn 2s;
+    -ms-animation: fadeIn 2s;
+    -moz-animation: fadeIn 2s;
+    -webkit-animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-ms-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .song-title {
     font-size: 1rem;
     font-weight: bold;
