Added fade in styling to open song details modal.

--- a/spotify-album-art/src/styles/General.scss
+++ b/spotify-album-art/src/styles/General.scss
@@ -53,3 +53,9 @@ $spotify-green: rgb(30, 215, 96);
     align-items: center;
     margin: 1rem 0;
 }
+
+.loading-spinner {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0;
+}
