--- a/spotify-album-art/src/styles/SongDisplay.scss
+++ b/spotify-album-art/src/styles/SongDisplay.scss
@@ -70,6 +70,12 @@
     font-style: italic;
 }
 
+.popularity-label {
+    font-size: 0.75rem;
+    font-style: italic;
+    opacity: 0.7;
+}
+
 .song-display-column {
     margin-bottom: 2rem;
 }
